# TonnelRelayerBot

./: .gitignore  config.json  config.yaml  filters.json  main.py  pyproject.toml
src/: config.py  constants.py  cypher.py  logger_config.py
src/bot/: bot_launcher.py  http_client.py
src/browser/: actions.py  browser_manager.py  local_storage.py  parser.py
src/logs/: log.py  progress.py  task_progress.py
src/utils/: console.py  new_elements_tracker.py
src/webdriver/: actions.py  browser_manager.py  local_storage_manager.py  page_elements.py
