[tool.poetry]
name = "nft-telegram-bot"
version = "0.1.0"
description = ""
authors = ["nosomename"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.28.1"
loguru = "^0.7.3"
setuptools = "^75.8.0"
selenium-wire = "^5.1.0"
blinker = "1.7.0"
pyyaml = "^6.0.2"
colorama = "^0.4.6"
tqdm = "^4.67.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
