[tool.poetry]
name = "nft-telegram-bot"
version = "0.1.0"
description = ""
authors = ["nosomename"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.28.1"
loguru = "^0.7.3"
setuptools = "^75.8.0"
selenium-wire = "^5.1.0"
blinker = "1.7.0"
pyyaml = "^6.0.2"
colorama = "^0.4.6"
tqdm = "^4.67.1"
tabulate = "^0.9.0"
halo = "^0.0.31"
debugpy = "^1.8.12"
rich = "^13.9.4"
undetected-chromedriver = "^3.5.5"
mitmproxy = "^11.1.3"
pycryptodome = "^3.21.0"
pkcs7 = "^0.1.2"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.12"


[tool.poetry.scripts]
some = "heap.some:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
